# okao_client

./: CMakeLists.txt  CMakeLists.txt~  error_log.txt  package.xml
launch/: eye_contact.launch  eye_contact.launch~  face_mapping_tools.launch  face_mapping_tools.launch~  okao.launch  okao.launch~  okao_demo.launch  okao_demo.launch~
src/: #eye_contact5_2.cpp#  #people_recog_info2_1test.cpp#  .#eye_contact5_2.cpp  .#eye_contact_move_base.cpp  .#position_sub.cpp  JsonToMsg.hpp  JsonToMsg.hpp~  Message.h~  MsgToMsg.hpp  MsgToMsg.hpp~  OkaoClient.cpp  OkaoClient.cpp~  OkaoClient3.cpp~  OkaoClient4.cpp  OkaoClient4.cpp~  OkaoClientSub1.cpp~  OkaoClientSub2.cpp~  OkaoClientSub3.cpp~  OkaoClientSub4.cpp  OkaoClientSub4.cpp~  OkaoClientTest.cpp  OkaoClientTest.cpp~  depth_to_laser.cpp~  depth_to_laser2.cpp  eye_contact.cpp  eye_contact.cpp~  eye_contact.h  eye_contact.h~  eye_contact2.cpp  eye_contact3.cpp  eye_contact3.cpp~  eye_contact3_1.cpp  eye_contact3_1.cpp~  eye_contact3_2.cpp  eye_contact4.cpp  eye_contact4_1.cpp  eye_contact4_2.cpp~  eye_contact5.cpp  eye_contact5_2.cpp  eye_contact_move_base.cpp  (+61 more)
src/images/: okaodata.txt  okaodata.txt~
src/images/okao/: okao2.jpgへのリンク
src/legacy/: #okao_client_sphere.cpp#  eye_contact.cpp  okao_stack.cpp  position_sub.cpp
src/legacy/past/: face_mapping_publisher2.cpp
src/legacy/past/20150309/: OkaoClient2.cpp
src/legacy/people/: peopledata.txt  peopledata.txt~  peopledata2.txt  peopledata_d.txt
src/past/: OkaoClientSub1.cpp  OkaoClientSub2.cpp  OkaoClientSub3.cpp  face_mapping_publisher_all.cpp  kinect_okao_bind.cpp
src/past/20150309/: OkaoClient.cpp
src/people/: peopledata.txt  peopledata.txt~  peopledata_d.txt
srv/: LostTracking.srv  LostTracking.srv~  OkaoName.srv  OkaoName.srv~  OkaoPosSrv.srv  OkaoPosSrv.srv~  OkaoStack.srv  OkaoStack.srv~  testmsg.srv
